new real time data sensor dashboard

--- a/src/app/humidity-graph/humidity-graph.component.html
+++ b/src/app/humidity-graph/humidity-graph.component.html
@@ -1,1 +1,6 @@
-<div echarts [options]="chartOptions" style="height:400px;"></div>
+<ul>
+    <li *ngFor="let humidity of (humidityData$ | async)">
+      {{ humidity }}%
+    </li>
+  </ul>
+  
